--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,4 +1,27 @@
 @charset "utf-8";
 /* CSS Document */
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
-body{font-family: 'Roboto', sans-serif;}
+body{font-family: 'Roboto', sans-serif; font-weight:300; color:#5e6977}
+header{padding:38px 0px; box-shadow:0 0 5px 2px #e8e8e8;}
+.logo{margin-top:}
+#navbar{margin-top:-10px}
+.r-logo{display:none}
+.nav > li > a {color:#86939e; font-size:16px; font-weight:400; padding:0; margin: 0px 40px 0 0;}
+.nav > li > a:hover{background:none; color:#000}
+.container .jumbotron {background:none; padding-left:0; padding-right:0}
+.jumbotron h1{font-weight:300; font-size:52px; color:#43484d;; margin-bottom:30px}
+.jumbotron p.lead{font-size:22px; margin:0}
+
+
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 320px),
+only screen and ( min–moz-device-pixel-ratio: 2) and (min-width: 320px),
+only screen and ( -o-min-device-pixel-ratio: 2/1) and (min-width: 320px),
+only screen and ( min-device-pixel-ratio: 2) and (min-width: 320px),
+only screen and ( min-resolution: 192dpi) and (min-width: 320px),
+only screen and ( min-resolution: 2dppx) and (min-width: 320px) {
+		.r-logo{display:block}
+		.n-logo{display:none;}
+ 
+}
