--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,6 +1,10 @@
 @charset "utf-8";
 /* CSS Document */
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
+@font-face {
+     font-family: 'Roboto-Light';
+    src: url('../fonts/Roboto-Light.woff') format('woff')
+    }
 body{font-family: 'Roboto', sans-serif; font-weight:300; color:#5e6977}
 img{max-width:100%}
 header{padding:38px 0px; box-shadow:0 0 5px 2px #e8e8e8;}
@@ -10,8 +14,8 @@ header{padding:38px 0px; box-shadow:0 0 5px 2px #e8e8e8;}
 .nav > li > a {color:#86939e; font-size:16px; font-weight:400; padding:0; margin: 0px 40px 0 0;}
 .nav > li > a:hover{background:none; color:#000}
 .container .jumbotron {background:none; padding-left:0; padding-right:0}
-.jumbotron h1{font-weight:300; font-size:52px; color:#43484d;; margin-bottom:30px}
-.jumbotron p.lead{font-size:22px; margin:0 52px;}
+.jumbotron h1{font-family: 'Roboto-Light'; font-size:52px; color:#43484d;; margin-bottom:30px}
+.jumbotron p.lead{font-family: 'Roboto-Light';font-size:22px; margin:0 52px;}
 .services{margin:50px 0px;}
 .service_container{display:table;}
 .service_icon,.service_text{display:table-cell; padding:10px; vertical-align:top}
@@ -25,7 +29,7 @@ header{padding:38px 0px; box-shadow:0 0 5px 2px #e8e8e8;}
 .slider .row{display:flex; min-height:440px; align-items:center}
 .my-slider{width:64%}
 .my-slider p{font-size:16px; font-weight:400; margin:20px 0px; color:#86939e}
-.my-slider h2{font-size:32px; font-weight:300}
+.my-slider h2{font-size:32px; font-family: 'Roboto-Light';}
 .slid-nav{list-style-type:none; margin:45px 0 0; padding:0}
 .slid-nav li{background:#e7e9ec; width:5px; height:5px; border-radius:50%; margin-right:10px; display:inline-block; cursor:pointer}
 .slid-nav li.active_item{background:#358ed7; border:5px solid #358ed7; }
@@ -34,12 +38,14 @@ a.slide_navigation:hover{opacity:1}
 
 .intro_pricing{background:#f9f9f9;}
 
-.pricing_wrap{border-radius:10px; background:#fff; display:flex; flex-wrap:wrap; margin-bottom:-70px}
+.pricing_wrap{border-radius:10px; background:#fff; float:left; display:flex; flex-wrap:wrap; margin-bottom:-135px}
 .pricing{width:33%; padding:30px; text-align:center}
-.pricing h2{font-size:14px; margin:0; font-weight:500; color:#358ed7;text-transform:uppercase}
+.pricing h2{font-size:14px; margin:0;  color:#358ed7;text-transform:uppercase}
 .pricing h3{font-size:16px; font-weight:400; margin:0; color:#86939e; }
 .fee{color:#86939e; font-weight:400}
 #business h2,#business h3,#business .price,#business .description,#business .fee{color:#fff;}
+#business h2{opacity:.7}
+#business .description,#business h3{opacity:.6}
 .pricing hr{background:#e1e8ee; border:none; height:1px; margin:30px 0px}
 #business hr{background:#61bdda}
 
@@ -53,8 +59,14 @@ a.slide_navigation:hover{opacity:1}
 .btn_pricing{margin-top:40px; padding:10px; font-size:16px; color:#358ed7; background:none; border:2px solid #e1e8ee}
 #business{ width:34%;background:#39add1; color:#fff; border-bottom-right-radius:10px;border-top-right-radius:10px;}
 #business .btn_pricing{background:#7dc855; color:#fff; border:2px solid #7dc855; }
-
-
+.bottom{padding-top:170px; background:#5e6977; color:#fff}
+.bottom h1{color:#fff}
+.bottom .jumbotron{margin-bottom:0}
+.bottom .jumbotron p.lead{opacity:.8}
+.bottom button{background:#7dc855; color:#fff; padding:15px 40px; margin-top:50px }
+.partners h2{font-size:18px; opacity:.6}
+.logo-partners{margin-top:5px;}
+.logo-partners img{margin:25px;}
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 320px),
 only screen and ( min–moz-device-pixel-ratio: 2) and (min-width: 320px),
