--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5,15 +5,19 @@
      font-family: 'Roboto-Light';
     src: url('../fonts/Roboto-Light.woff') format('woff')
     }
-body{font-family: 'Roboto', sans-serif; font-weight:300; color:#5e6977}
+body{font-family: 'Roboto', sans-serif; font-weight:300; color:#5e6977; padding-top:100px}
 img{max-width:100%}
 a:hover{text-decoration:none;}
-header{padding:38px 0px; box-shadow:0 0 5px 2px #e8e8e8;}
+header{padding:38px 0px; box-shadow:0 0 5px 2px #e8e8e8; position:fixed; top:0; width:100%; background:#fff; z-index:999}
 .logo{margin-top:}
 #navbar{margin-top:0px}
-.r-logo{display:none}
+.retina_ready{display:none}
 .nav > li > a {color:#86939e; font-size:16px; font-weight:400; padding:0; margin: 0px 40px 0 0;}
 .nav > li > a:hover{background:none; color:#000}
+
+
+
+
 .container .jumbotron {background:none; padding-left:0; padding-right:0}
 .jumbotron h1{font-family: 'Roboto-Light'; font-size:52px; color:#43484d;; margin-bottom:30px}
 .jumbotron p.lead{font-family: 'Roboto-Light';font-size:22px; margin:0 52px;}
@@ -24,11 +28,12 @@ header{padding:38px 0px; box-shadow:0 0 5px 2px #e8e8e8;}
 .service_text{padding:10px 30px 10px 20px;}
 .service_text h2{font-size:18px; color:#43484d; margin-top:0; line-height:18px}
 .service_text p{font-size:16px; color:#86939e;}
-.slider{min-height:395px; background:url(../images/bg_slider.jpg) no-repeat 0px bottom;}
+.slider{min-height:395px;}
 .learnmore a{color:#358ed7; position:relative; font-weight:500}
 .learnmore a:after{content:url(../images/icon_next.png);margin-left:10px; margin-top:1px; position:absolute}
 .slider .row{display:flex; min-height:440px; align-items:center}
 .my-slider{width:64%}
+.slider img{display:none;}
 .my-slider p{font-size:16px; font-weight:400; margin:20px 0px; color:#86939e}
 .my-slider h2{font-size:32px; font-family: 'Roboto-Light';}
 .slid-nav{list-style-type:none; margin:45px 0 0; padding:0}
@@ -68,7 +73,7 @@ a.slide_navigation:hover{opacity:1}
 .partners h2{font-size:18px; opacity:.6}
 .logo-partners{margin-top:5px;}
 .logo-partners img{margin:25px;}
-footer{background:#545e6b; padding:50px 0px; color:#fff;}
+footer{background:#545e6b; padding:50px 0px; color:#fff; position:relative;}
 .footer_desc{opacity:.6; font-size:16px; font-weight:400}
 footer h2{font-size:18px; margin:0}
 footer ul{list-style-type:none; margin:15px 0px; padding:0}
@@ -85,10 +90,14 @@ footer select{-webkit-appearance: none;
    color:#babec2;
    font-size:16px;
    }
+.killscroll{overflow-y: scroll;
+    position: fixed;
+    width: 100%;}
 
 @media(max-width:1199px) and (min-width:992px){
 	.jumbotron h1 {font-size:42px}
 	.description{font-size:14px}
+	footer select{width:110px; background: url(../images/arrow-select.png) no-repeat right 0px center;}
 }
 
 @media(max-width:992px) and (min-width:768px){
@@ -99,8 +108,10 @@ footer select{-webkit-appearance: none;
 .my-slider {
     width: 85%;
 }
+
 .slider {min-height:310px; background-size:420px}
 .slid-nav {margin: 15px 0 0;}
+
 .slider .row{min-height:inherit}
 .description{font-size:14px}
 .pricing_attr li {font-size:13px;margin-bottom: 22px;}
@@ -112,6 +123,63 @@ footer ul li {margin-bottom: 6px;}
 footer ul li a{font-size:14px;}
 }
 
+@media(max-width:767px){
+#navbar{
+	background: #fff;
+    position: fixed;
+    z-index: 99;
+	width:290px;
+	-webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.47);
+	-moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.47);
+	box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.47);
+	display:none;
+	top:99px;
+	left:0;
+	height: calc(100% - 99px);
+	}
+	#navbar ul{
+	 height: 100%;
+    overflow-x: hidden;
+	width:100%; margin:0;
+	}
+	#navbar ul li{display:block; text-align:left; width:100%; border-bottom:1px solid #e1e1e1;}	
+	.navbar-toggle {
+    background-color: #000;
+	left: 30px;
+    position: absolute;
+    top: -33px;
+}
+#navbar ul li a{padding:20px 30px; display:block; margin:0}
+#navbar ul li a:hover{background:#E4E9ED}
+.navbar-toggle{border-radius:0; background:none}
+.navbar-brand{height:auto;}
+.navbar-toggle .icon-bar {
+	color:#43484d;
+    border: 1px solid;}
+.logo{ margin-left:70px;
+	}
+
+.slider{background:none !important;min-height:auto}
+.my-slider {
+    width: 100%;
+	padding:0px 30px 30px;	
+}
+.slider img{display:block;}
+.slider .row {min-height:auto;}
+
+
+.jumbotron h1 {font-size:42px}
+.pricing_wrap,.pricing,#business{width:100%; display:block}
+#business{
+	border-radius:0;
+	border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+
+}
+.menu_footer{float:none;}
+.footer_desc{margin:30px 0px}
+#language{position:absolute; top:65px; right:15px}
+}
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 320px),
 only screen and ( min–moz-device-pixel-ratio: 2) and (min-width: 320px),
@@ -119,7 +187,13 @@ only screen and ( -o-min-device-pixel-ratio: 2/1) and (min-width: 320px),
 only screen and ( min-device-pixel-ratio: 2) and (min-width: 320px),
 only screen and ( min-resolution: 192dpi) and (min-width: 320px),
 only screen and ( min-resolution: 2dppx) and (min-width: 320px) {
-		.r-logo{display:block}
-		.n-logo{display:none;}
+		.retina_ready{display:inline-block;  height:auto}
+		.lg_device{display:none;}
+		.logo .retina_ready{width:78px;}
+		#language .retina_ready{width:15px;}
+		.footer_logo .retina_ready{width:78px}
  
+}
+@media (min-width: 768px) and (orientation : landscape) {
+	#navbar{display:block !important;}
 }
