--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -93,7 +93,7 @@ footer select{-webkit-appearance: none;
 .killscroll{overflow-y: scroll;
     position: fixed;
     width: 100%;}
-
+#scrolltop{width:40px; height:40px; background:#eee; border-radius:50%; position:fixed; bottom:30px; right:30px; font-size:20px; padding-top:7px; text-align:center; cursor:pointer}
 @media(max-width:1199px) and (min-width:992px){
 	.jumbotron h1 {font-size:42px}
 	.description{font-size:14px}
